syntax = "proto3";

package pdf;

import "definitions/validate/Validate.proto";
import "definitions/user/AuthorBean.proto";

option go_package = "github.com/yb2020/odoc-proto/gen/go/pdf";

// 论文PDF模型
message PaperPDF {
  string id = 1;
  string app_id = 2;
  string paper_id = 3 [(validate.rules).string = {min_len: 1}];
  string source_url = 4;
  string store_static_domain = 5 [(validate.rules).string = {min_len: 1}];
  string store_file_full_name = 6 [(validate.rules).string = {min_len: 1}];
  string creator = 7;
  string creator_id = 8;
  string modifier = 9;
  string modifier_id = 10;
  string fileSHA256 = 11;
  string download_url = 12;
  string record_id = 13;
  string private_status = 14;
  string online_status = 15;
  string auth_status = 16;
  string catalogue = 17;
  uint32 parse_count = 18;
  string licence_type = 19;
  float size = 20;
  uint32 page_count = 21;
  uint64 created_at = 22;
  uint64 updated_at = 23;
}

// @api_path: /api/pdf/paper
// @method: POST
// @content-type: application/json
// @summary: 创建论文PDF
message CreatePaperPDFRequest {
  string app_id = 1;
  string paper_id = 2 [(validate.rules).string = {min_len: 1}];
  string source_url = 3;
  string store_static_domain = 4 [(validate.rules).string = {min_len: 1}];
  string store_file_full_name = 5 [(validate.rules).string = {min_len: 1}];
  string creator = 6;
  string creator_id = 7;
  string fileSHA256 = 8;
  string download_url = 9;
  string record_id = 10;
  string private_status = 11;
  string online_status = 12;
  string auth_status = 13;
  string catalogue = 14;
  uint32 parse_count = 15;
  string licence_type = 16;
  float size = 17;
  uint32 page_count = 18;
}

message CreatePaperPDFResponse {
  string id = 1;
}

// @api_path: /api/pdf/paper
// @method: GET
// @content-type: application/json
// @summary: 获取论文PDF
message GetPaperPDFRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
}

message GetPaperPDFResponse {
  PaperPDF pdf = 1;
}

// @api_path: /api/pdf/paper
// @method: PUT
// @content-type: application/json
// @summary: 更新论文PDF
message UpdatePaperPDFRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
  string source_url = 2;
  string download_url = 3;
  string private_status = 4;
  string online_status = 5;
  string auth_status = 6;
  string catalogue = 7;
  uint32 parse_count = 8;
  uint32 page_count = 9;
}

message UpdatePaperPDFResponse {
  string id = 1;
}

// @api_path: /api/pdf/paper
// @method: DELETE
// @content-type: application/json
// @summary: 删除论文PDF
message DeletePaperPDFRequest {
  string id = 1 [(validate.rules).string = {min_len: 1}];
}

message DeletePaperPDFResponse {
  string id = 1;
}

// @api_path: /api/pdf/papers
// @method: GET
// @content-type: application/json
// @summary: 列出论文PDF
message ListPaperPDFsRequest {
  uint32 limit = 1 [(validate.rules).uint32 = {gt: 0}];
  uint32 offset = 2 [(validate.rules).uint32 = {gte: 0}];
}

message ListPaperPDFsResponse {
  repeated PaperPDF pdfs = 1;
}

// @api_path: /api/pdf/papers/count
// @method: GET
// @content-type: application/json
// @summary: 获取论文PDF总数
message CountPaperPDFsRequest {
}

message CountPaperPDFsResponse {
  uint64 count = 1;
}

// @api_path: /api/pdf/paper/byPaperId
// @method: GET
// @content-type: application/json
// @summary: 根据论文ID获取PDF
message GetPaperPDFByPaperIdRequest {
  string paper_id = 1 [(validate.rules).string = {min_len: 1}];
}

message GetPaperPDFByPaperIdResponse {
  PaperPDF pdf = 1;
}

// @api_path: /api/pdf/paper/byMD5
// @method: GET
// @content-type: application/json
// @summary: 根据文件hash获取PDF
message GetPaperPDFByFileSHA256Request {
  string fileSHA256 = 1 [(validate.rules).string = {min_len: 32, max_len: 32}];
}

message GetPaperPDFByFileSHA256Response {
  PaperPDF pdf = 1;
}


// @old_api_path: /aiKnowledge/pdf/getPdfStatusInfo/v2
// @api_path: /api/pdf/getPdfStatusInfo/v2
// @method: GET
// @content-type: application/json
// @summary: 获取pdf相关状态信息
message GetPdfStatusInfoRequest {
  string pdfId = 1 [(validate.rules).string = {min_len: 1}];
  string noteId = 2 [(validate.rules).string = {min_len: 1}];
}

// 用户状态枚举
enum UserStatusEnum {
  TOURIST = 0; // 游客
  GUEST = 1;   // 访客
  OWNER = 2;   // 所有者
}



message GetPdfStatusInfoResponse {
  bool noteOpenAccessFlag = 1;  // 笔记是否公开,true=公开,false=非公开
  bool hasPdfAccessFlag = 2;   // 当前用户是否有pdf权限,true=有权限,false=无权限
  string docName = 3;           // 文献名称
  UserStatusEnum pdfUserStatus = 4;  // pdf用户状态
  UserStatusEnum noteUserStatus = 5; // 笔记用户状态
  string pdfUrl = 6;            // pdfUrl
  string paperTitle = 7;        // 论文标题
  string paperId = 8;           // 论文ID
  string authPdfId = 9;        // 认证公开的pdfId
  user.AuthorBean pdfOwnerInfo = 10; // 该pdf上传者信息
}

// @api_path: /api/pdf/pdfReader/getSetting
// @method: POST
// @content-type: application/json
// @summary: 获取pdf阅读设置
message GetPdfReaderSettingRequest {
  int32 clientType = 1;
}

message GetPdfReaderSettingResponse {
  string setting = 1;
}

// @api_path: /api/pdf/pdfReader/recordSetting
// @method: POST
// @content-type: application/json
// @summary: 记录pdf阅读设置
message RecordPdfReaderSettingRequest {
  int32 clientType = 1;
  string setting = 2;
}